Wed Dec 15 13:10:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* MySQL.m, Postgres.m, ECPG.pgm: Do NSLog() logging of field
	information only when debug level is greater than 1.

Fri Dec 10 10:50:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* GNUmakefile: Remove unnecessary libraries from link commands for
	bundles.  On Darwin, specifying these leads to multiply defined
	symbols when an executable attempts to load the bundle.

Fri Nov 19 14:40:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* WebServer.m: parse basic authentication infor and set it in extra
	headers in request.
	* WebServerBundles.m: support handling of paths longer than the
	ones set for each bundle.

Tue Nov 11 14:48:05 2004  Nicola Pero  <n.pero@mi.flashnet.it>

	* GNUmakefile (BUNDLE_INSTALL_DIR): install bundles in
	GNUSTEP_INSTALLATION_DIR, not GNUSTEP_LOCAL_ROOT.

Tue Nov 09 10:20:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.hm: add ([-append:]) method to merge transactions.

Thu Oct 28 08:45:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* WebServer.m: Don't generate alert about connection with empty
	request if we have lready handled a request and reset.

Tue Oct 26 16:50:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.m: debug and duration logging should be turned off
	by default ...  a different value crept in somehow.

Sat Oct  9 14:29:35 2004  Nicola Pero  <n.pero@mi.flashnet.it>

	* SQLClient.m ([SQLClient -simpleExecute:]): Fixed logging
	durations and statements in transactions.

Thu Oct 08 10:30:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.[hm]: Add ([-quotef:,...]) to perform efficient quoting
	of a string produced using printf style format and arguments.

Thu Oct 07 10:30:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.[hm]: Optimise timing operations somewhat.

Wed Oct 06 15:04:23 2004  Nicola Pero <n.pero@mi.flashnet.it>

	* WebServer.h: Fixed typo in parameter name.
