@@ -268,6 +268,19 @@
 
 /**
  * Loads a template file from disk and places it in aResponse as content
+ * whose mime type is determined from the file extension using the
+ * provided mapping (or a simple built-in default mapping if map is nil).<br />
+ * If you have a dedicated web server for handling static pages (eg images)
+ * it is better to use that rather than vending static pages using this
+ * method.  It's unlikley that this method can be as efficient as a dedicated
+ * server.  However this mechanism is adequate for moderate throughputs.
+ */
+- (BOOL) produceResponse: (GSMimeDocument*)aResponse
+	  fromStaticPage: (NSString*)aPath
+		   using: (NSDictionary*)map;
+
+/**
+ * Loads a template file from disk and places it in aResponse as content
  * of type 'text/html' with a charset of 'utf-8'.<br />
  * The argument aPath is a path relative to the root path set using
  * the -setRoot: method.<br />
