@@ -1,3 +1,8 @@
+Sat Dec 18 06:00:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>
+
+	* WebServer.m: Fix bug in substitution of nil values into templates.
+	Add new method to vend static pages.
+
 Wed Dec 15 13:10:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>
 
 	* MySQL.m, Postgres.m, ECPG.pgm: Do NSLog() logging of field
